--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,16 @@ body {
   color: #FEF2BF;
 }
 
+#rules {
+  color: #FEF2BF;
+  text-align: left;
+  margin: 0% 15%;
+  font-size: 2rem;
+  display: inline-flex;
+  font-family: 'Press Start 2P', cursive;
+  font-weight: 400;
+}
+
 .container {
   display: block;
   width: 50%;
@@ -24,6 +34,7 @@ body {
   width: 200px;
   border: 10px solid black;
   border-radius: 20%;
+  display: none;
 }
 
 .game-over {
